clap_derive/tests/ui/skip_subcommand.stderr
error: `subcommand`, `flatten`, `external_subcommand` and `skip` cannot be used together
  --> $DIR/skip_subcommand.rs:17:24
   |
17 |     #[clap(subcommand, skip)]
   |                        ^^^^
